# ichor

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  ICHOR.py  LICENSE  MANIFEST.in  Makefile  Notes.txt  README.md  check_ascii.py  config.properties  def_write_ase_gjf.py  gen_globals_docs.py  get-pip.py  globals.md  how_to_install.md  ichor3.py  ichor_config.yaml  install.bat  make_file_structure.py  make_globals_table.py  make_tree_directory.py  make_tree_html.py  multipole.txt  multipole_rotation_gen.py  notes.md  out.html  pyproject.toml  pyrightconfig.json  read_wfn.py  s_curve.txt  setup.cfg  test.f90  test.py  test_imports.py  water.properties
ichor_cli_subpackage/: README.md  setup.cfg  setup.py
ichor_cli_subpackage/ichor/cli/: __init__.py  __main__.py  console_menu.py  global_menu_variables.py  main_menu.py  menu_description.py  menu_descriptions.py  menu_options.py  points_directory_menu.py  problem_finder.py  script_names.py  submenu_item.py
ichor_cli_subpackage/ichor/cli/analysis_menus/: gaussian_optimisation_menu.py  geometry_analysis.py
ichor_cli_subpackage/ichor/cli/completers/: __init__.py  tab_completer.py
ichor_cli_subpackage/ichor/cli/general_menus/: concatenate_points_menu.py  options_menu.py  queue_menu.py
ichor_cli_subpackage/ichor/cli/machine_learning_menus/: per_atom_menu.py  per_menu.py
ichor_cli_subpackage/ichor/cli/main_menu_submenus/: __init__.py
ichor_cli_subpackage/ichor/cli/make_set_methods/: min_max.py  min_max_mean.py  random.py
ichor_cli_subpackage/ichor/cli/menus/: __init__.py  main_menu.py
ichor_cli_subpackage/ichor/cli/molecular_dynamics_menus/: __init__.py  amber.py  cp2k.py  md_menu.py
ichor_cli_subpackage/ichor/cli/sub_menus/: __init__.py
ichor_cli_subpackage/ichor/cli/tools_menu/: make_sets_menu.py  tools_menu.py
ichor_cli_subpackage/ichor/cli/useful_functions/: __init__.py  add_items_to_menu.py  bool_to_str.py  single_or_many_points_directories.py  submit_free_flow_python_on_compute.py  user_input.py
ichor_cli_subpackage/ichor/ichor_cli/: __init__.py  __main__.py  problem_finder.py
ichor_cli_subpackage/ichor/ichor_cli/analysis/: __init__.py  get_validation_set.py
ichor_cli_subpackage/ichor/ichor_cli/make_set_methods/: make_set_method.py  make_sets.py  min_max.py  min_max_mean.py  random.py
ichor_core/: README.md  setup.cfg
ichor_core/ichor/core/: __init__.py
ichor_core/ichor/core/analysis/: predictions.py  (+1 more)
ichor_core/tests/test_atoms/: __init__.py  test_atoms.py
ichor_core/tests/test_files/: __init__.py  test_read_gjf.py  test_read_int.py  test_read_ints.py  test_read_wfn.py  test_read_xyz.py  test_write_gjf.py
ichor_core/tests/test_iqa_forces/: test_iqa_forces.py
ichor_core/tests/test_multipole_moments/: test_recover_molecular_multipole_moments.py
ichor_core_subpackage/: README.md  setup.cfg  setup.py
ichor_core_subpackage/ichor/core/: __init__.py  constants.py  itypes.py
ichor_core_subpackage/tests/: path.py
ichor_core_subpackage/tests/atoms/: __init__.py  atoms.py
ichor_core_subpackage/tests/files/: test_gjf.py  test_int.py  test_read_gjf.py  test_write_gjf.py  test_xyz.py
ichor_core_subpackage/tests/test_atoms/: __init__.py  test_atoms.py
ichor_core_subpackage/tests/test_files/: __init__.py  test_point_directory.py  test_points_directory.py  test_read_aim.py  test_read_gau.py  test_read_gjf.py  test_read_int.py  test_read_ints.py  test_read_wfn.py  test_read_xyz.py  test_write_gjf.py  test_write_xyz.py
ichor_core_subpackage/tests/test_iqa_forces/: starting_geom_centered_atoms.xyz  test_iqa_forces.py
maybe_not_needed/: Makefile  active_learning.py  collate_log.py  gen_globals_docs.py  get_atoms.py  how_to_install.md  notes.md  pandora.py  pyproject.toml  typing_extensions.py
maybe_not_needed/active_learning/: sigmu.py
maybe_not_needed/auto_run/: auto_run_ferebus.py  stop.py
maybe_not_needed/auto_run/ichor_jobs/: auto_run_ichor_aimall.py  auto_run_ichor_ferebus.py  auto_run_ichor_morfi.py
maybe_not_needed/auto_run/per/: per.py
maybe_not_needed/cmake/: check.py  cmake_lists.py  update.py  version.py
maybe_not_needed/cmake/parser/: list_utils.py  parsing.py  rand.py
maybe_not_needed/executable/: __init__.py  executable.py  ferebus.py
maybe_not_needed/git/: cmd.py  compat.py  db.py  exc.py
maybe_not_needed/git/index/: __init__.py  fun.py  util.py
maybe_not_needed/git/refs/: head.py  symbolic.py
maybe_not_needed/globals/: __init__.py
maybe_not_needed/hpc/: active_learning.py  data_lock.py  drop_compute.py  points.py  qct.py
maybe_not_needed/hpc/active_learning/: __init__.py  highest_variance.py  random_sampling.py
maybe_not_needed/hpc/auto_run/: __init__.py  auto_run_aimall.py  standard_auto_run.py
maybe_not_needed/hpc/commands/: morfi_command.py  pandora_command.py
maybe_not_needed/hpc/dlpoly_analysis/: dlpoly_submit.py
maybe_not_needed/hpc/gaussian_optmise/: __init__.py  optimum_analysis.py
maybe_not_needed/hpc/make_sets/: __init__.py  make_set_method.py  min_max_mean.py
maybe_not_needed/hpc/managers/: check_manager.py  script_timing_manager.py
maybe_not_needed/hpc/programs/: __init__.py  pandora.py  qcp.py  qct.py
maybe_not_needed/menu/: __init__.py  get_input.py  get_models.py  get_validation_set.py  menu.py  simple_term_menu.py  submenu.py  tab_completer.py
maybe_not_needed/old_menus/: __init__.py  __main__.py  main_menu.py
maybe_not_needed/old_menus/analysis_menus/: analysis_menu.py  geometry_analysis.py
maybe_not_needed/old_menus/machine_learning_menus/: make_models.py  per_menu.py
maybe_not_needed/old_menus/molecular_dynamics_menus/: tyche.py
maybe_not_needed/old_menus/tools_menu/: __init__.py  make_sets_menu.py  tools_menu.py
maybe_not_needed/old_setup_py/: setup.cfg
maybe_not_needed/programs/: __init__.py
maybe_not_needed/rmse/: __init__.py  rmse.py
maybe_not_needed/test/: test_gpr_predictions_and_variance.py
maybe_not_needed/test/test_geometries/: test_ammonia_geometry.xyz  test_glycine_geometry.xyz  test_nma_geometry.xyz  test_water_dimer_geometry.xyz  test_water_monomer_geometry.xyz
(+2091 files in other folders)
