# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = ichor
version = attr: ichor.__version__
author = Matthew Burn
author_email = mattburn96@gmail.com
url = https://github.com/popelier-group/ICHOR
description = Machine Learning Pipeline Suite For The Popelier Group
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/popelier-group/ICHOR/issues
    Changelog = https://github.com/popelier-group/ICHOR/blob/master/CHANGELOG.md

[options]
zip_safe = false
include_package_data = True
python_requires = >= 3.6
packages = ichor
;package_dir =
;    ichor = ichor
;    ichor.cli = ichor_cli
;    ichor.hpc = ichor_hpc
test_suite = tests
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    # setuptools >=46.4.0     # let's you use attr: to extract version from a module
install_requires =
    numpy
    pandas
tests_require =
    numpy
    sklearn

;[options.packages.find]
;where = .
;include = ichor*
;exclude = additional

[options.entry_points]
console_scripts =
    ichor3 = ichor.cli:ichor_main
    ichor = ichor.cli:ichor_main

[options.package_data]
ichor = *.pyi

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[flake8]
max-line-length = 120
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
