[metadata]
name = ichor-cli
version = attr: ichor.cli.__version__
author = Matthew Burn, Yulian Manchev
author_email = matthew.burn@postgrad.manchester.ac.uk, yulian.manchev@postgrad.manchester.ac.uk
maintainer = Yulian Manchev
maintainer_email = yulian.manchev@postgrad.manchester.ac.uk
description = ICHOR cli package
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = 
    github = https://github.com/popelier-group/ICHOR
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
packages = find_namespace:
install_requires =
    ichor-core
    ichor-hpc
    python_version >= "3.7"

[options.entry_points]
console_scripts =
    ichor3 = ichor.cli:ichor_main
    ichor = ichor.cli:ichor_main

[options.packages.find]
where = .
include = ichor*

[bdist_wheel]
python-tag=py37