[metadata]
name = ichor-core
version = 4.0.0
author = Matthew Burn, Yulian Manchev
author_email = matthew.burn@postgrad.manchester.ac.uk, yulian.manchev@postgrad.manchester.ac.uk
maintainer = Yulian Manchev
maintainer_email = yulian.manchev@postgrad.manchester.ac.uk
description = ICHOR core package
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    github = https://github.com/popelier-group/ICHOR
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
packages = find_namespace:
install_requires =
    matplotlib
    numpy
    pandas
    pyarrow
    typing-extensions
    SQLAlchemy
    xlsxwriter
    natsort
tests_require = pytest
python_requires = >=3.8

[options.extras_require]
dev =
    pytest
    sphinx
    nbconvert
    pre-commit
    ase
    cclib
    sphinx-rtd-theme
    nbsphinx
    myst_parser
    ipython
    ipykernel
    nbval

[bdist_wheel]
python-tag=py38

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
ignore = E203, F403, F405, E731, E741, W503, W605
