[metadata]
name = ichor-core
version = attr: ichor.core.__version__
author = Matthew Burn, Yulian Manchev
author_email = matthew.burn@postgrad.manchester.ac.uk, yulian.manchev@postgrad.manchester.ac.uk
maintainer = Yulian Manchev
maintainer_email = yulian.manchev@postgrad.manchester.ac.uk
description = ICHOR core package
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = 
    github = https://github.com/popelier-group/ICHOR
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
package_dir = .
packages = find_namespace:
install_requires =
    numpy
    pandas
    python_version >= "3.7"
tests_require = pytest

[options.packages.find]
where = .

[bdist_wheel]
python-tag=py37