#[project]
#name = "ICHOR"
#version = "3.0.1"
#description = "A machine learning pipeline suite for the Popelier Group"
#authors = [
#    "Matthew Burn <mattburn96@gmail.com>",
#    "Yulian Manchev <yulian.manchev@postgrad.manchester.ac.uk>"
#]
#readme = "README.md"
#python = "^3.6"
#repository = "https://github.com/popelier-group/ICHOR"

[tool.black]
line-length = 79